<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_to_do">

    <Button
        android:id="@+id/button_add_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addToDo"
        android:text="@string/activity_add_todo_button"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_enter_todo_textview"
        android:id="@+id/textview"
        app:layout_constraintRight_toLeftOf="@+id/edit_text_add_todo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/edit_text_add_todo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textview"
        app:layout_constraintRight_toLeftOf="@+id/button_add_time"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/activity_hint_edittext"
        android:inputType="text"/>

    <Button
        android:id="@+id/button_add_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addTime"
        android:text="@string/activity_add_time_buttton"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edit_text_add_todo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>